--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="double_wrapper02 orange02"><div class="double_wrapper01 orange01"></div></div>
         </div>
         <div class="name">
-            <p>CANDOOR BEES</p>
+            <p>CANDOR BEES</p>
             <span class="name_circle01"></span>
             <span class="name_circle02"></span>
         </div>
